--- a/public/review_write.html
+++ b/public/review_write.html
@@ -23,15 +23,15 @@
 						<div class="corp_info_image">기업이미지</div>
 						<div class="corp_info_data">
 							<div>
-								<span>{{Corp_name}}</span>
-								<span>기관 소재지</span>    
+								<span>{{name}}</span>
+								<span>{{location}}</span>    
 							</div>
 							<div>
 								<div class="star_bg">
-									<span style="width: 50%"></span>
+									<span style="width: {{avg_total*20}}%"></span>
 								</div>
-								<span>3.0</span>
-								<span>(00개 리뷰)</span>
+								<span>{{avg_total}}</span>
+								<span>({{cnt}}개 리뷰)</span>
 							</div>
 							<ul class="hashtag_top">
 								<li>#해시태그1</li>
@@ -46,7 +46,7 @@
 				<div class="contents_wrap">
 					<div class="contents">
 						<p>입력하신 모든 정보는 익명으로 처리됩니다.</p>
-						<form class="review_form" id="review_form" method="post" action="/review_write/{{Corp_name}}">
+						<form class="review_form" id="review_form" method="post" action="/review_write/{{name}}">
 							<div class="working_info">
 								<div class="period">
 									<label>근무기간</label>
@@ -159,14 +159,14 @@
 									<label for="pros">장점</label>
 									<div>
 										<span id="pros_cnt">현재 글자수:000자</span>
-										<textarea name="pros" type="text" id="pros" placeholder="근무했던 기관의 장점을 작성해주세요 (최소 50자)" onchange="checkPros()" required></textarea>
+										<textarea name="pros" type="text" id="pros" placeholder="근무했던 기관의 장점을 작성해주세요 (최소 50자)" required></textarea>
 									</div>
 								</div>
 								<div class="write_item">
 									<label for="cons">단점</label>
 									<div>
 										<span id="cons_cnt">현재 글자수:000자</span>
-										<textarea name="cons" type="text" id="cons" placeholder="근무했던 기관의 단점을 작성해주세요 (최소 50자)" onchange="checkCons()" required></textarea>
+										<textarea name="cons" type="text" id="cons" placeholder="근무했던 기관의 단점을 작성해주세요 (최소 50자)" required></textarea>
 									</div>
 								</div>
 							</div>
