css수정, db render

--- a/public/main.html
+++ b/public/main.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recruit-sw</title>
 
-    <link href="./styles/style_reset.css" rel="stylesheet" type="text/css">
-    <link href="./styles/style_mobile.css" rel="stylesheet" type="text/css">
-    <link href="./styles/style_pc.css" rel="stylesheet" type="text/css">
+    <link href="/styles/style_reset.css" rel="stylesheet" type="text/css">
+    <link href="/styles/style_mobile.css" rel="stylesheet" type="text/css">
+    <link href="/styles/style_pc.css" rel="stylesheet" type="text/css">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 
