--- a/public/review.html
+++ b/public/review.html
@@ -96,63 +96,63 @@
 					<div class="corp_info_image">기업이미지</div>
 					<div class="corp_info_data">
 						<div>
-							<span>{{name}}</span>
-							<span>{{location}}</span>    
+							<span>{{info.name}}</span>
+							<span>{{info.location}}</span>    
 						</div>
 						<div>
 							<div class="star_bg">
-								<span style="width:{{avg_total*20}}%"></span>
+								<span style="width:{{info.avg_total*20}}%"></span>
 							</div>
-							<span>{{avg_total}}</span>
-							<span>({{cnt}}개 리뷰)</span>
+							<span>{{info.avg_total}}</span>
+							<span>({{info.cnt}}개 리뷰)</span>
 						</div>
 						<ul class="hashtag_top">
-							<li>#해시태그1</li>
+							<li>#{{hash.hash_1}}</li>
 							<li>#해시태그2</li>
 							<li>#해시태그3</li>
 							<li>#해시태그4</li>
 						</ul>
 					</div>
-					<a href="/review_write/{{name}}" class="btn_review">이 기관 리뷰하기</a>
+					<a href="/review_write/{{info.name}}" class="btn_review">이 기관 리뷰하기</a>
 				</div>
-				<a href="/review_write/{{name}}" class="btn_write"></a>
+				<a href="/review_write/{{info.name}}" class="btn_write"></a>
 				<button class="btn_toTop"></button>    
 			</div>
 			<div class="contents_wrap">
 				<div class="contents_main">
 					<div class="total_score">
-						<div class="total_score_corpname">{{name}} 리뷰</div>
+						<div class="total_score_corpname">{{info.name}} 리뷰</div>
 						<div class="total_score_wrap">
 							<div class="total_score_main">
-								<p>{{avg_total}}</p>
+								<p>{{info.avg_total}}</p>
 								<div class="star_bg">
-									<span style="width: {{avg_total*20}}%"></span>
+									<span style="width: {{info.avg_total*20}}%"></span>
 								</div>
-								<p>{{cnt}}개 리뷰</p>
+								<p>{{info.cnt}}개 리뷰</p>
 							</div>
 							<ul class="total_score_detail">
 								<li class="total_detail_star">
-									<span>{{avg_career.toFixed(1)}}</span>
+									<span>{{info.avg_career.toFixed(1)}}</span>
 									<span></span>
 									<span>커리어 향상</span>
 								</li>
 								<li class="total_detail_star">
-									<span>{{avg_worklife.toFixed(1)}}</span>
+									<span>{{info.avg_worklife.toFixed(1)}}</span>
 									<span></span>
 									<span>업무와 삶의 균형</span>
 								</li>
 								<li class="total_detail_star">
-									<span>{{avg_welfare.toFixed(1)}}</span>
+									<span>{{info.avg_welfare.toFixed(1)}}</span>
 									<span></span>
 									<span>복리후생</span>
 								</li>
 								<li class="total_detail_star">
-									<span>{{avg_culture.toFixed(1)}}</span>
+									<span>{{info.avg_culture.toFixed(1)}}</span>
 									<span></span>
 									<span>조직문화</span>
 								</li>
 								<li class="total_detail_star">
-									<span>{{avg_leadership.toFixed(1)}}</span>
+									<span>{{info.avg_leadership.toFixed(1)}}</span>
 									<span></span>
 									<span>리더십</span>
 								</li>
