--- a/public/review_write.html
+++ b/public/review_write.html
@@ -52,7 +52,11 @@
 									<label>근무기간</label>
 									<div>
 										<div>
-											<label for="first_date">입사일</label>
+											<div>
+												<label for="first_date">입사일</label>
+												<div>
+												</div>
+											</div>
 											<input type="month" max="YYYY-MM" id="first_date" name="first_date" required>
 										</div>
 										<div>
@@ -125,24 +129,24 @@
 									<div>키워드 선택하기</div>
 									<div>
 										<div class="item_hash">
-											<label for="hash_1">#역에서 가까운</label>
-											<input type="checkbox" id="hash_1" class="checkhash" name="hash_1" value="역에서 가까운">
+											<label for="hash_1">#간식제공</label>
+											<input type="checkbox" id="hash_1" class="checkhash" name="hash_1" >
 										</div>
 										<div class="item_hash">
-											<label for="hash_2">#자유로운 복장</label>
-											<input type="checkbox" id="hash_2" class="checkhash" name="hash_2" value="자유로운 복징">
+											<label for="hash_2">#유연근무제</label>
+											<input type="checkbox" id="hash_2" class="checkhash" name="hash_2">
 										</div>
 										<div class="item_hash">
-											<label for="hash_3">#간식 제공</label>
-											<input type="checkbox" id="hash_3" class="checkhash" name="hash_3" value="간식 제공">
+											<label for="hash_3">#자유로운 휴가</label>
+											<input type="checkbox" id="hash_3" class="checkhash" name="hash_3">
 										</div>
 										<div class="item_hash">
-											<label for="hash_4">#유연근무제</label>
-											<input type="checkbox" id="hash_4" class="checkhash" name="hash_4" value="유연근무제">
+											<label for="hash_4">#재택근무</label>
+											<input type="checkbox" id="hash_4" class="checkhash" name="hash_4">
 										</div>
 										<div class="item_hash">
-											<label for="hash_5">#테스트123</label>
-											<input type="checkbox" id="hash_5" class="checkhash" name="hash_5" value="테스트123">
+											<label for="hash_5">#리프레시 휴가</label>
+											<input type="checkbox" id="hash_5" class="checkhash" name="hash_5">
 										</div>
 									</div>
 									<div id="selected_hashtag" style="display: none;"></div>
