로그인 여부체크

--- a/public/main.html
+++ b/public/main.html
@@ -40,9 +40,9 @@
             <!-- <li><a href="#">커뮤니티</a></li> -->
           </ul>
           </div>
-            {% if user %}
+            {% if id %}
             <div>
-              <div>{{user}}님</div>
+              <div>{{nickname}}님</div>
               <a href="/logout">로그아웃</a>
             </div>
             {% else %}
