--- a/public/review_write.html
+++ b/public/review_write.html
@@ -75,9 +75,9 @@
 									<label for="work_type">근무직종</label>
 									<select id="work_type" name="work_type" required>
 										<option value="" selected disabled hidden>직종 선택</option>
-										<option value="Social_worker">사회복지사</option>
-										<option value="office_worker">사무원</option>
-										<option value="nutritonist">영양사</option>
+										<option value="사회복지사">사회복지사</option>
+										<option value="사무원">사무원</option>
+										<option value="영양사">영양사</option>
 									</select>	
 								</div>
 							</div>
