--- a/public/review_write.html
+++ b/public/review_write.html
@@ -6,16 +6,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>리뷰작성</title>
 		<link href="/styles/style_reset.css" rel="stylesheet" type="text/css">
+		<link href="/styles/style_header.css" rel="stylesheet">
 		<link href="/styles/review_write.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<div class="container">
-			<header>
-				<div class="header_wrap">
-					<h1><a href="/">NeedU</a></h1>
-					<button class="blind_btn_ham"></button>
-				</div>	
-			</header>
+			<div id="header_wrap">
+			</div>
 			<main>
 				<div class="corp_info_wrap">
 					<div class="div_line"></div>
@@ -187,6 +184,8 @@
 				<div>사회복지채용플랫폼 푸터</div>
 			</footer>
 		</div>
+		<script type="module" src="/js/header.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 		<script defer src="/js/review_write.js"></script>
 	</body>
 </html>
