header 웹 컴포넌트

--- a/public/main.html
+++ b/public/main.html
@@ -24,6 +24,7 @@
 <body>
   <div class="container">
     <div id="header_wrap">
+      <header-component data-name="{{User.nickname}}"></header-component>
     </div>
     <main>
       <div class="main_wrap">
