--- a/public/review.html
+++ b/public/review.html
@@ -12,6 +12,7 @@
 <body>
 	<div class="container">
 		<div id="header_wrap">
+			<header-component data-name="{{User.nickname}}"></header-component>
 		</div>
 		<main>
 			<div class="corp_info_wrap">
