--- a/public/review_write.html
+++ b/public/review_write.html
@@ -12,12 +12,13 @@
 	<body>
 		<div class="container">
 			<div id="header_wrap">
+				<header-component data-name="{{User.nickname}}"></header-component>
 			</div>
 			<main>
 				<div class="corp_info_wrap">
 					<div class="div_line"></div>
 					<div class="corp_info">
-						<div class="corp_info_image">기업이미지</div>
+						<div class="corp_info_image">{{기업이미지}}</div>
 						<div class="corp_info_data">
 							<div>
 								<span>{{Corp.name}}</span>
