--- a/public/search_write.html
+++ b/public/search_write.html
@@ -15,32 +15,12 @@
 				<header-component data-name="{{User.nickname}}"></header-component>
 			</div>
       <main>
-        <form class="search">
+        <form id="search_corp" class="search" method="get" action="/review_write/:name">
 					<div class="user_input">
 						<input type ="text" id="search_input" placeholder="기관명을 입력해주세요.">
-						<button></button>
+						<button type="submit" form="search_corp" id="btnSubmit" disabled="disabled"></button>
 					</div>
 					<ul class="auto_corp" style="display: none;">
-						<!-- <li>
-							<span>가나다복지관</span>
-							<span>서울 강남구</span>
-						</li>
-						<li>
-							<span>가나다복지관</span>
-							<span>서울 강남구</span>
-						</li>
-						<li>
-							<span>가나다복지관</span>
-							<span>서울 강남구</span>
-						</li>
-						<li>
-							<span>가나다복지관</span>
-							<span>서울 강남구</span>
-						</li>
-						<li>
-							<span>가나다복지관</span>
-							<span>서울 강남구</span>
-						</li> -->
 					</ul>
 					<div class="register" style="display: none;">
 						<span>찾으시는 기관이 없나요?</span>
