이전페이지 이동 제어

--- a/public/main.html
+++ b/public/main.html
@@ -7,7 +7,7 @@
     <title>NeedU</title>
 
     <link href="/styles/style_reset.css" rel="stylesheet" type="text/css">
-		<link href="/styles/style_header.css" rel="stylesheet">
+		<link href="/styles/webcomponent.css" rel="stylesheet">
 		<link href="/styles/main.css" rel="stylesheet">
 
 
@@ -39,11 +39,12 @@
     </main>
   <!-- main end -->
     <footer>
-      <div>사회복지채용플랫폼 푸터</div>
+      <footer-component></footer-component>
     </footer>
     <!-- footer end -->
   </div>
-  <script type="module" src="/js/header.js"></script>
+  <totop-component></totop-component>
+  <script type="module" src="/js/webcomponent.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
 </html>
