--- a/public/search_write.html
+++ b/public/search_write.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>리뷰작성</title>
 		<link href="./styles/style_reset.css" rel="stylesheet" type="text/css">
-		<link href="./styles/style_header.css" rel="stylesheet">
+		<link href="./styles/webcomponent.css" rel="stylesheet">
     <link href="./styles/review_write_search.css" rel="stylesheet">
 	</head>
 	<body>
@@ -29,10 +29,10 @@
         </form>
       </main>
 			<footer>
-				<div>사회복지채용플랫폼 푸터</div>
+				<footer-component></footer-component>
 			</footer>
 		</div>
-		<script type="module" src="./js/header.js"></script>
+		<script type="module" src="./js/webcomponent.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 		<script src="https://unpkg.com/hangul-js" type="text/javascript"></script>
 		<script defer src="./js/search_write.js"></script>
