헤더수정, 로그아웃 오류 수정

--- a/public/review_write.html
+++ b/public/review_write.html
@@ -127,23 +127,23 @@
 									<div>
 										<div class="item_hash">
 											<label for="hash_1">#간식제공</label>
-											<input type="checkbox" id="hash_1" class="checkhash" name="hash_1" >
+											<input type="checkbox" id="hash_1" class="checkhash" name="hash_1" value="#간식제공">
 										</div>
 										<div class="item_hash">
 											<label for="hash_2">#유연근무제</label>
-											<input type="checkbox" id="hash_2" class="checkhash" name="hash_2">
+											<input type="checkbox" id="hash_2" class="checkhash" name="hash_2" value="#유연근무제">
 										</div>
 										<div class="item_hash">
 											<label for="hash_3">#자유로운 휴가</label>
-											<input type="checkbox" id="hash_3" class="checkhash" name="hash_3">
+											<input type="checkbox" id="hash_3" class="checkhash" name="hash_3" value="#자유로운 휴가">
 										</div>
 										<div class="item_hash">
 											<label for="hash_4">#재택근무</label>
-											<input type="checkbox" id="hash_4" class="checkhash" name="hash_4">
+											<input type="checkbox" id="hash_4" class="checkhash" name="hash_4" value="#재택근무">
 										</div>
 										<div class="item_hash">
 											<label for="hash_5">#리프레시 휴가</label>
-											<input type="checkbox" id="hash_5" class="checkhash" name="hash_5">
+											<input type="checkbox" id="hash_5" class="checkhash" name="hash_5" value="#리프레시 휴가">
 										</div>
 									</div>
 									<div id="selected_hashtag" style="display: none;"></div>
