--- a/public/search_write.html
+++ b/public/search_write.html
@@ -15,23 +15,51 @@
 				<header-component data-name="{{User.nickname}}"></header-component>
 			</div>
       <main>
-        <form id="search_corp" class="search" method="get" action="/review_write/:name">
-					<div class="user_input">
-						<input type ="text" id="search_input" placeholder="기관명을 입력해주세요." autocomplete="off">
-						<ul class="auto_corp" style="display: none;">
-						</ul>	
-						<div class="register" style="display: none;">
-							<span>찾으시는 기관이 없나요?</span>
-							<button>기관 등록하기</button>
+				<div class="main_wrap">
+					<form id="search_corp" class="search" method="get" action="/review_write/:name">
+						<div class="user_input">
+							<input type ="text" id="search_input" placeholder="기관명을 입력해주세요." autocomplete="off">
+							<ul class="auto_corp" style="display: none;">
+							</ul>	
+							<div class="register" style="display: none;">
+								<span>찾으시는 기관이 없나요?</span>
+								<span class="btn_addCorp">기관 등록하기</span>
+							</div>
+						</div>
+						<button type="submit" form="search_corp" id="btnSubmit" disabled="disabled"></button>
+					</form>
+					<div class="modal-box" style="display: none;">
+						<div class="modal_addCorp">
+							<div>기관 등록하기</div>
+							<form id="frm_add_corp">
+								<div class="Corp_data">
+									<div>
+										<label for="modal_Corp_name">기관명</label>
+										<input id="modal_Corp_name" type="text" placeholder="예) 행복사회복지사복지관">
+									</div>
+									<div>
+										<label>소재지</label>
+										<div>
+											<select>시도
+												<option>헤이</option>
+											</select>
+											<select>시군구</select>	
+										</div>
+									</div>
+								</div>
+								<div class="btn_modalSubmit">
+									<button class="modal_cancel">취소</button>
+									<button class="modal_submit">등록</button>
+								</div>	
+							</form>
 						</div>
 					</div>
-					<button type="submit" form="search_corp" id="btnSubmit" disabled="disabled"></button>
-        </form>
+				</div>
       </main>
-			<footer>
-				<footer-component></footer-component>
-			</footer>
 		</div>
+		<footer>
+			<footer-component></footer-component>
+		</footer>
 		<script type="module" src="./js/webcomponent.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 		<script src="https://unpkg.com/hangul-js" type="text/javascript"></script>
